attempt spacing fixes

--- a/packages/reporter/src/instruments/instruments.scss
+++ b/packages/reporter/src/instruments/instruments.scss
@@ -1,5 +1,7 @@
 .reporter {
   .instruments-container {
+    margin: 0 8px;
+
     .instrument-content {
       background-color: $reporter-section-background;
       border-left: 1px solid $reporter-section-background;
